--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prettier-plugin-solidity": "^1.0.0-beta.24",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.34.0",
     "react-moralis": "^1.4.0",
     "react-scripts": "5.0.1",
     "reactstrap": "^9.1.3",
