--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-moralis": "^1.4.0",
     "react-scripts": "5.0.1",
     "reactstrap": "^9.1.3",
+    "social-media-icons-react": "^1.1.10",
     "web-vitals": "^2.1.4",
     "web3uikit": "^0.1.159"
   },
