--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-moralis": "^1.4.0",
     "react-scripts": "5.0.1",
     "reactstrap": "^9.1.3",
+    "remove": "^0.1.5",
     "social-media-icons-react": "^1.1.10",
     "web-vitals": "^2.1.4",
     "web3uikit": "^0.1.159"
@@ -42,5 +43,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.8",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8"
   }
 }
